# windows_init

./: README.md  main.bat  pyproject.toml
python_init/: pyproject.toml  python_install.ps1
