[tool.poetry]
name = "win-init"
version = "0.1.0"
description = ""
authors = ["Rafał Bazan <rafalbe777@gmail.com>"]
readme = "README.md"
packages = [{include = "win_config"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
