[tool.poetry]
name = "python-init"
version = "0.1.0"
description = ""
authors = ["Rafał Bazan <rafalbe777@gmail.com>"]
readme = "README.md"
packages = [{include = "python_config"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
